main dashboardpage overflow resolved

--- a/app/components/navigation/sidebar.module.scss
+++ b/app/components/navigation/sidebar.module.scss
@@ -40,7 +40,8 @@
 .closeBtn {
   display: block;
   margin-left: auto;
-  margin-bottom: 20px;
+  margin-top: 35px;
+  margin-bottom: 15px;
 
   @media (min-width: 1024px) {
     display: none;
@@ -137,6 +138,9 @@
   color: #213f7d;
   font-weight: 600;
 }
+
+
+
 
 
 
